--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: LintTestPerformin
 on:
-    push
+    workflow_dispatch:
+    push:
+    pull_request:
+        types:
+            - opened
+            - closed
 jobs:
        mainjob:
             runs-on: 'ubuntu-latest'
